Volumetric effects not working #69662

Closed
opened 2019-09-09 09:40:15 +02:00 by khaled · 12 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-04-03 23:27, hash: 0e78e3038d
Worked: (optional)

Short description of error
[volumetric effects are not working at all using Eevee]

image.png

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-04-03 23:27, hash: `0e78e3038d` Worked: (optional) **Short description of error** [volumetric effects are not working at all using Eevee] ![image.png](https://archive.blender.org/developer/F7726490/image.png) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @Spirit_of_K

Added subscriber: @Spirit_of_K
Author

please i am trying to enable volumetric effects using Eevee. please check attached image to see if my setup is not correct. however i have checked and am sure it is correct. please help me. my laptop is an Alienware m15, could this be a hardware issue with GPU or processor?

please i am trying to enable volumetric effects using Eevee. please check attached image to see if my setup is not correct. however i have checked and am sure it is correct. please help me. my laptop is an Alienware m15, could this be a hardware issue with GPU or processor?
Author

This comment was removed by @Spirit_of_K

*This comment was removed by @Spirit_of_K*
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Seems you are using a blender version from 2019-04-03, could you check the same in a current build from https://builder.blender.org/download/?
Also try upgrading your GPU drivers.
If all that fails, please post the output of Help > Save System Info here...

Seems you are using a blender version from 2019-04-03, could you check the same in a current build from https://builder.blender.org/download/? Also try upgrading your GPU drivers. If all that fails, please post the output of `Help` > `Save System Info` here...
Author

system-info.txt

i have followed your instructions and it has failed so find above the system info

[system-info.txt](https://archive.blender.org/developer/F7727576/system-info.txt) i have followed your instructions and it has failed so find above the system info
Author

any updates on this case please?

any updates on this case please?
Member

Actually (since this is working in my simple test), could you provide the .blend you are getting this issue in?
[this makes sure we are all on the same page... thx in advance...]

Actually (since this is working in my simple test), could you provide the .blend you are getting this issue in? [this makes sure we are all on the same page... thx in advance...]
Author

hi philipp. here it is{F7739597}

hi philipp. here it is{[F7739597](https://archive.blender.org/developer/F7739597/scene_man_and_monster.blend)}
Author

any news please philipp

any news please philipp
Member

Some notes:

  • Principled Volume > Density seems way to high, try reducing from 37.2 to 0.2
  • Principled Volume > Emision Strength seems way to high, try reducing from 18.4 to 0.0 [not sure what was intended here though...]
  • Render > Volumetrics > Distribution is at 1.0 if I put this at anything below [like the default of 0.8], I am getting something reasonable, see

image.png

regarding the fact that setting Render > Volumetrics > Distribution to exactly 1.0 will effectively disable the whole volumetric effect, i need to check a little further...

Some notes: - `Principled Volume` > Density seems way to high, try reducing from 37.2 to 0.2 - `Principled Volume` > `Emision Strength` seems way to high, try reducing from 18.4 to 0.0 [not sure what was intended here though...] - `Render` > `Volumetrics` > `Distribution` is at 1.0 if I put this at anything below [like the default of 0.8], I am getting something reasonable, see ![image.png](https://archive.blender.org/developer/F7750412/image.png) regarding the fact that setting `Render` > `Volumetrics` > `Distribution` to exactly 1.0 will effectively disable the whole volumetric effect, i need to check a little further...

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Richard Antalik self-assigned this 2020-01-10 19:24:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69662
No description provided.