Fix eevee volumetrics distribution at 1.0

reported in T69662

Reviewers: fclem

Differential Revision: https://developer.blender.org/D5809